# ChangeLog for media-gfx/aqsis
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/aqsis/ChangeLog,v 1.15 2008/08/05 22:23:31 maekke Exp $

*aqsis-1.4.0 (05 Aug 2008)

  05 Aug 2008; Markus Meier <maekke@gentoo.org> -aqsis-1.2.0.ebuild,
  -aqsis-1.3.0_p20080707.ebuild, +aqsis-1.4.0.ebuild:
  version bump to 1.4.0, bug #232699; remove old

*aqsis-1.3.0_p20080707 (07 Jul 2008)

  07 Jul 2008; Markus Meier <maekke@gentoo.org>
  -aqsis-1.3.0_p20080627.ebuild, +aqsis-1.3.0_p20080707.ebuild:
  bump to latest snapshot, this should fix bug #230171

  28 Jun 2008; Markus Meier <maekke@gentoo.org>
  aqsis-1.3.0_p20080627.ebuild:
  use cmake-utils eclass

*aqsis-1.3.0_p20080627 (28 Jun 2008)

  28 Jun 2008; Markus Meier <maekke@gentoo.org>
  +aqsis-1.3.0_p20080627.ebuild:
  version bump, bug #229387

*aqsis-1.2.0-r1 (14 Apr 2008)

  14 Apr 2008; Markus Meier <maekke@gentoo.org>
  +files/aqsis-1.2.0-gcc43.patch, +aqsis-1.2.0-r1.ebuild:
  fix gcc-4.3 building by Peter Alfredsen in bug #217662

  16 Jan 2008; Markus Meier <maekke@gentoo.org> -aqsis-1.0.1.ebuild,
  aqsis-1.2.0.ebuild:
  make repoman happy and remove old

  23 Feb 2007; Luca Barbato <lu_zero@gentoo.org> ChangeLog:
  useflag and keywords updated

*aqsis-1.2.0 (22 Feb 2007)

  22 Feb 2007; Luca Barbato <lu_zero@gentoo.org> +aqsis-1.2.0.ebuild:
  New version, thanks to Chris Foster <foster@physics.uq.edu.au> and 
  Alan Jones <skyphyr@gmail.com>, for the ebuild and for testing and
  bugfixing as shown in bug #161800

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org> -aqsis-1.0.0.ebuild:
  clean out old, non-modX ebuild

  19 Dec 2005; Marcelo Goes <vanquirius@gentoo.org> -aqsis-0.9.3.ebuild,
  aqsis-1.0.0.ebuild, aqsis-1.0.1.ebuild:
  Remove old ebuild, remove unnecessary src_compile(), do not install
  COPYING/INSTALL, use make install instead of einstall.
