@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/aqsis
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/aqsis/ChangeLog,v 1.15 2008/08/05 22:23:31 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/aqsis/ChangeLog,v 1.16 2008/08/23 10:36:27 maekke Exp $
+
+  23 Aug 2008; Markus Meier <maekke@gentoo.org> -aqsis-1.2.0-r1.ebuild:
+  old
 
 *aqsis-1.4.0 (05 Aug 2008)
 
